# building-rust-for-production

./: README.md  compile-musl.sh
01-local/: generate-timings.sh
01-local/src/: main.rs
02-ci/: compile.sh
02-ci/ci-optimized/ci/src/: main.rs
02-ci/ci/ci/: Cargo.toml
02-ci/ci/ci/src/: main.rs
02-ci/ci/sample-app/: Cargo.toml
02-ci/ci/sample-app/.cargo/: config.toml
02-ci/ci/src/: main.rs
02-ci/wasm/: compile-wasm.sh
02-ci/wasm/cross-compile-wasm-ci/src/: main.rs
02-ci/wasm/cross-compile-wasm/src/: main.rs
02-cross-compile/: compile.sh
02-cross-compile/cross-compile-ci/src/: main.rs
02-cross-compile/cross-compile-musl-ci/src/: main.rs
02-cross-compile/cross-compile-wasm/: Cargo.toml
ci/: Cargo.toml  README.md
cross-compile-musl/: Cargo.toml
cross-compile-musl/src/: main.rs
cross-compile/cross-compile-ci/src/: main.rs
cross-compile/cross-compile-musl-ci/: README.md
cross-compile/cross-compile-musl-ci/src/: main.rs
production/: Cargo.toml  README.md
sample-app/: Cargo.toml
sample-app/src/: main.rs
